growing-shop-java/src/main/java/com/example/growingshop/global/error/config/ErrorResponse.java
package com.example.growingshop.global.error.config;

public class ErrorResponse {
    private final String message;

    public ErrorResponse(String message) {
        this.message = message;
    }

    public String getMessage() {
        return message;
    }
}
